# selfless-attention

./: .gitignore  BASELINE_AUDIT.md  CODE_AUDIT.md  EXPERIMENTS.md  PAPER_PLAN.md  PLAN.md  README.md  RESULTS.md  RESULTS_SUMMARY.md  THRESHOLDS.md  TODO.md  calculate_eval_scores.py  collect_appendix_sweep.py  collect_likelihood.py  collect_unified_bpb.py  dump_paloma_corpus.py  plot_consistency.py  pyproject.toml  viz_likelihood.py
accelerate_configs/: 1_node_4_gpus_deepspeed_zero2.yaml  1_node_8_gpus_deepspeed_zero2.yaml  test.yaml
configs/ar/: lm_eval_ar_0.6B.yaml  lm_eval_ar_0.6B_preload.yaml  lm_eval_ar_250M.yaml  lm_eval_ar_342M.yaml  pretraining.yaml  pretraining_0.6B.yaml  pretraining_0.6B_preload.yaml  pretraining_1B.yaml  pretraining_1B_smoke.yaml  pretraining_250M.yaml  pretraining_342M.yaml
configs/dream/: lm_eval_dream_0.6B.yaml  lm_eval_dream_0.6B_preload.yaml  lm_eval_dream_250M.yaml  lm_eval_dream_342M.yaml  pretraining.yaml  pretraining_0.6B.yaml  pretraining_0.6B_preload.yaml  (+3 more)
download_script/: download_dataset-fineweb-edu.py  download_model.py
eval/: consistency_probe.py  text_likelihood.py  unified_lr_bpb.py
generation/: dream_gen.py  llada_gen.py  selfless_gen.py  xlnet_gen.py
pretrain/: train_ar.py  train_dream.py  train_llada.py  train_sdar.py  train_selfless.py  train_xlnet.py
tests/: test_modeling_selfless_refactored.py
utils/: dataset_arrow.py  dataset_eval.py  dataset_hf.py  dataset_sft.py  dataset_sft_instruct.py  dataset_stream.py  dataset_utils.py  diffusion_utils.py  math_eval.py  preprocess.py  utils.py  wsd_schedule.py
(+169 files in other folders)
