[project]
name = "selfless-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets==4.4.2",
    "deepspeed==0.18.3",
    "faiss-gpu-cu12>=1.13.2",
    "flash-attn==2.8.3",
    "liger-kernel>=0.6.4",
    "lm-eval>=0.4.9.2",
    "math-verify>=0.8.0",
    "mauve-text>=0.4.0",
    "omegaconf>=2.3.0",
    "pylatexenc>=2.10",
    "setuptools<70",
    "tensorboard>=2.20.0",
    "torch==2.8.0",
    "torch-tb-profiler>=0.4.3",
    "wandb>=0.19.0",
    "torchao==0.12.0",
    "transformers==4.57.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
